[tool.poetry]
name = "idasen-controller-mqtt"
version = "2.0.3"
description = "Command line tool for controlling the Ikea Idasen (Linak) standing desk with MQTT support"
authors = ["Mihai Ordean, Rhys Tyers"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0.0"
aiohttp = "^3.8.4"
appdirs = "^1.4.4"
bleak = "^0.19.5"
PyYAML = "^6.0"
asyncio_mqtt = ">=0.16.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
idasen-controller-mqtt = 'idasen_controller_mqtt.main:init'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
